# SCN--13X-666

./: README.md  pyproject.toml
.github/: copilot-instructions.md
src/shadowcore_nexus/: __init__.py  __main__.py
src/shadowcore_nexus/artifacts/config/: config.json  daemon_config.json  id_forge.py  phantom_scry_dir.txt  phantom_scry_dirty100_sample.json  phanton_scry_dirty100_sample.csv
src/shadowcore_nexus/artifacts/logs/: daemon.logclear
src/shadowcore_nexus/core/: __init__.py  config.py  configuration.py  daemon_ops.py  event_system.py  handler.py  intel_harvester.py  module_loader.py  output_formatter.py  path_resolver.py  paths.py  target_manager.py
src/shadowcore_nexus/interfaces/: __init__.py  cli.py  cli_dispatcher.py  daemon_logger.py  lilith_tui.py  tui.py
src/shadowcore_nexus/modules/: email_scraper.py  financial_trail.py  forgeid  lan_mapper.py  legal_case_fetcher.py  logger.py  net_scan.2.0.py  net_scanner.py  revi_net_scanner.py  scry.py  supply_chain_mapper.py
src/shadowcore_nexus/modules/multi_hop_vpn_tor/config/: vpn_list.json
src/shadowcore_nexus/modules/net_mapper/: lan_mapper.py
src/shadowcore_nexus/modules/shadowveil/: README.md  ShadowVeil.py  __init__.py  cli.py  core.py  core_2.py  hub_adapter.py  install.ps1  install.sh  module_manifest.json
src/shadowcore_nexus/rituals/: __init__.py  cleanslate_module.py  encoding.py  forgeid_v_1.py  netmap_ritual.py  phone_number_tracker.py  reverse_shell.py  scanner.py  simulated_mapper.py
src/shadowcore_nexus/utils/: __init__.py  compat.py  file_monitor.py  logging.py  validation.py
